fix rng reproducibility, bump eacirc-core, refactor cmake
- PCG initialization from seeder was not done properly as it is seeded from non-compliant SeedSeq. Compliant SeedSeq should return the same results (reentrant) while we need our SeedSeq to advance after calling generate() so we can seed many different streams. https://github.com/imneme/pcg-cpp/issues/67
- cmake is refactored, boost::random is needed now. It is possible to disable portable randomness with cmake parameter PORTABLE_RANDOMNESS=OFF,
then Boost is not needed. However, this is not recommended.
- fix rnd_plt_ctx_streams test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,14 +4,45 @@ project(crypto-streams)
 find_package(Git)
 
 if (NOT EXISTS eacirc-core/CMakeLists.txt)
-    execute_process(
-            COMMAND ${GIT_EXECUTABLE} submodule update --init --recursive
-            WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-    )
+    if(GIT_FOUND)
+        execute_process(
+                COMMAND ${GIT_EXECUTABLE} submodule update --init --recursive
+                WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+        )
+    else()
+        message(STATUS "Git not found, please make sure eacirc-core submodule is updated")
+    endif()
+endif()
+
+if(BUILD_TAG)
+    message(STATUS "Building build tag ${BUILD_TAG}")
+    add_definitions("-DBUILD_TAG=${BUILD_TAG}")
+else()
+    message(STATUS "Building without build tag")
+endif()
+
+if(APPLE)
+    include_directories(SYSTEM /usr/include/malloc)
+    if(POLICY CMP0042)
+        cmake_policy(SET CMP0042 NEW)
+    endif()
+endif()
+
+
+# option(STATIC "Link libraries statically" ON)
+option(BUILD_testsuite "Build all tests." OFF)
+set(STATIC ON)
+
+if (BUILD_testsuite)
+    add_definitions(-DBUILD_testsuite)
 endif()
 
 set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/eacirc-core/cmake)
 include(build_stream)
+include(detect_version)
+include(static)
+include(portable_randomness)
+detect_version(version.h)
 
 # === Set CXX flags ===
 if(CMAKE_COMPILER_IS_GNUCXX OR ${CMAKE_CXX_COMPILER_ID} MATCHES "Clang")
@@ -23,10 +54,7 @@ else()
     message(FATAL_ERROR "unsupported compiler id:${CMAKE_CXX_COMPILER_ID}, path: ${CMAKE_CXX_COMPILER}")
 endif()
 
-option(BUILD_testsuite "Build all tests." OFF)
-if (BUILD_testsuite)
-    add_definitions(-DBUILD_testsuite)
-endif()
+add_subdirectory(eacirc-core)
 
 # === Provide sources as library
 set(crypto-streams-sources
@@ -43,9 +71,9 @@ set_target_properties(crypto-streams-lib PROPERTIES
         LINKER_LANGUAGE CXX
         )
 
-target_link_libraries(crypto-streams-lib eacirc-core)
-
-add_subdirectory(eacirc-core)
+target_link_libraries(crypto-streams-lib
+        eacirc-core
+        ${EXTRA_LIBRARIES})
 
 add_subdirectory(streams/stream_ciphers)
 add_subdirectory(streams/hash)
@@ -61,7 +89,10 @@ set_target_properties(crypto-streams PROPERTIES
         LINKER_LANGUAGE CXX
         )
 
-target_link_libraries(crypto-streams eacirc-core crypto-streams-lib)
+target_link_libraries(crypto-streams
+        eacirc-core
+        crypto-streams-lib
+        ${EXTRA_LIBRARIES})
 
 build_stream(crypto-streams stream_ciphers)
 build_stream(crypto-streams hash)
@@ -98,10 +129,15 @@ if (BUILD_testsuite)
     file(COPY testsuite/test_resources DESTINATION resources)
 
     # Standard linking to gtest stuff.
-    target_link_libraries(testsuite gtest gtest_main)
+    target_link_libraries(testsuite
+            gtest
+            gtest_main
+            ${EXTRA_LIBRARIES})
 
     # Extra linking for the project.
-    target_link_libraries(testsuite eacirc-core)
+    target_link_libraries(testsuite
+            eacirc-core
+            ${EXTRA_LIBRARIES})
 
     build_stream(testsuite stream_ciphers)
     build_stream(testsuite hash)
